2018-01-19  Charlie Zender  <zender@uci.edu>

	* Add copyright/license to README.md

2018-01-18  Ajay Saini  <sainiak@uci.edu>

	* GCNET: Added new temp variables to store quality control variables

	* GCNET: Compatible with classic netCDF formats

	* GCNET: corrected calculation of hour variable to include other values

	* Added global attribute featureType and cf_role for station_name

	* Meeting with Wenshan to discuss coordinates and cell_methods attribute

	* Coordinates attribute added to more variables

	* Added cell_methods attribute

2018-01-18  Charlie Zender  <zender@uci.edu>

	* Fix usage example on README.md

2018-01-17  Ajay Saini  <sainiak@uci.edu>

	* Added station_name variable for all datasets

	* Added functionality to change station_name from command line for all datasets

	* Corrected _FillValue for GCNET

	* Explored argparse, optparse and getopt modules to fix the canonical ordering. Still in progress.

	* Changed sample data file for GCNET

2018-01-16  Ajay Saini  <sainiak@uci.edu>

	* Presented plots in group meeting

	* JAWS bi-weekly meeting to discuss issues and priorities of tasks

	* Made latitude and longitude scalar

	* Added the "coordinates" attribute with values "latitude longitude"

	* Corrected file name matching for lat and long

	* Renamed sample data files with station name

	* Corrected _FillValue for all the variables

2018-01-12  Charlie Zender  <zender@uci.edu>

	* Change degree_east/north to CF-preferred units degrees_east/north

2018-01-12  Ajay Saini  <sainiak@uci.edu>

	* Created monthly diurnal cycle plot

	* Created monthly values plot

	* Created annual cycle plot

	* Created climatological seasonal cycle plot

	* Added _FillValue attribute for all datasets

	* Worked on fixing canonical ordering of arguments. Still in progress

2018-01-11  Ajay Saini  <sainiak@uci.edu>

	* GCNET- Corrected calculation of temp and pressure variables to skip '999' values.
