@@ -41,13 +41,14 @@ def gcnet2nc(args):
 	root_grp.Conventions = 'CF-1.7'
 
 	# dimension
+        stn_nm_lng_max=25
 	root_grp.createDimension('time', None)
 	root_grp.createDimension('nbnd', 2)
 	root_grp.createDimension('station', 1)
-	root_grp.createDimension('station_name', 25)
+	root_grp.createDimension('stn_nm_lng_max', stn_nm_lng_max)
 
 	# variables
-	station_name = root_grp.createVariable('station_name', 'S1', ('station_name',))
+	station_name = root_grp.createVariable('station_name', 'S1', ('stn_nm_lng_max',))
 	latitude = root_grp.createVariable('latitude', 'f4')
 	longitude = root_grp.createVariable('longitude', 'f4')
 	time = root_grp.createVariable('time', 'i4', ('time',))
