@@ -32,12 +32,13 @@ def promice2nc(args):
 	root_grp.Conventions = 'CF-1.7'
 
 	# dimension
-	root_grp.createDimension('station', 25)
+        stn_nm_lng_max=25
+	root_grp.createDimension('stn_nm_lng_max', stn_nm_lng_max)
 	root_grp.createDimension('time', None)
 	root_grp.createDimension('nbnd', 2)
 	
 	# variables
-	station_name = root_grp.createVariable('station_name', 'S1', ('station',))
+	station_name = root_grp.createVariable('station_name', 'S1', ('stn_nm_lng_max',))
 	latitude = root_grp.createVariable('latitude', 'f4')
 	longitude = root_grp.createVariable('longitude', 'f4')
 	time = root_grp.createVariable('time', 'i4', ('time',))
